cluster/k8s/loki/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    goldilocks.fairwinds.com/vpa-update-mode: "initial"
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
